<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_HMI" Id="{34722c1a-84dd-4dec-86eb-7e07732b5fb7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	lr_Heater1: LREAL;
	lr_Heater2: LREAL;
	lr_Heater3: LREAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>