<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Signal_Generator" Id="{a40fd4e4-7c7e-4708-9d5d-48ff3e5f5cf8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Signal_Generator
VAR
	lr_Counter1: LREAL;
	lr_Counter2: LREAL;
	lr_Counter3: LREAL;
	i:int;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[lr_Counter1:= lr_Counter1+0.005;
GVL_HMI.lr_Heater1:= SIN(lr_Counter1+3)*125+185;


lr_Counter2:= lr_Counter2+0.006;
GVL_HMI.lr_Heater2:= SIN(lr_Counter2)*120+180;

lr_Counter3:= lr_Counter3+0.008;
GVL_HMI.lr_Heater3:= COS(lr_Counter3)*130+190;

FOR i:=1 TO 20 BY 1 DO
	GVL_HMI.TrendMe[i]:=GVL_HMI.lr_Heater1* INT_TO_LREAL(i)*0.05;
END_FOR

FOR i:=1 TO 499 BY 1 DO
	GVL_HMI.HistoTrendData[i]:=GVL_HMI.HistoTrendData[i+1];
END_FOR

GVL_HMI.HistoTrendData[500]:=GVL_HMI.lr_Heater1;]]></ST>
    </Implementation>
    <LineIds Name="Signal_Generator">
      <LineId Id="7" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="28" Count="1" />
      <LineId Id="27" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="31" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>